<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="plant information"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/plant_name"
        android:hint="plant name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/scientificname"
        android:hint="scientificname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/description"
        android:hint="description"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/light"
        android:hint="light"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/water"
        android:hint="water"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/temperature"
        android:hint="@string/temperature"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/plantsize"
        android:hint="@string/plantsize"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/potsize"
            android:hint="@string/potsize"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/humidity"
            android:hint="@string/humidity"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/propagation"
            android:hint="@string/propagation"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/location"
            android:hint="@string/location"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/toxity"
            android:hint="@string/toxity"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/season"
            android:hint="@string/season"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/instructions"
            android:hint="@string/instructions"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/plantcolor"
            android:hint="@string/plantcolor"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/plantfragrance"
            android:hint="@string/plantfragrance"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/disease"
            android:hint="@string/disease"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/plantcare"
            android:hint="@string/plantcare"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/soiltype"
            android:hint="@string/soiltype"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/maintenancelevel"
            android:hint="@string/maintenancelevel"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/lifetime"
            android:hint="@string/lifetime"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/growthrate"
            android:hint="@string/growthrate"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectimage"
        android:text="select image from capture"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectfromgallery"
            android:text="select image from gallery"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/selectedimageview"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="selected image"/>

<Button
    android:id="@+id/addplant"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="add plant"
    android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/showplant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="show plant"
        android:layout_marginTop="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plantrecyclerview"
        android:visibility="gone"/>

    </LinearLayout>
</ScrollView>
</LinearLayout>